# golemate

./: Cargo.toml  README.md
.github/workflows/: main.yml
gui/: Cargo.toml
gui/src/: gui.rs
src/: analysis.rs  backends.rs  cli.rs  lib.rs  main.rs  opts.rs
src/backends/: gwasm.rs  mod.rs  native.rs
