[package]
name = "golemate"
version = "0.1.0"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
edition = "2018"

[[bin]]
name = "golemate"
path = "src/cli.rs"

[lib]
name = "golemate"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["gwasm", "native"]
native = []
gwasm = ["gwasm-api"]

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.14"
anyhow = "1.0.28"
gwasm-api = { version = "0.3.0", optional = true }
shakmaty = "0.16.3"
