[package]
name = "golemate-gui"
version = "0.1.0"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "golemate-gui"
path = "src/gui.rs"

[dependencies]
golemate = { path = ".."}
glib = "0.9.3"
gtk = "0.8.1"
anyhow = "1.0.31"
log = "0.4.8"
env_logger = "0.7.1"
